--- a/MASTER TUNE-UP.csproj
+++ b/MASTER TUNE-UP.csproj
@@ -80,11 +80,11 @@
     <Compile Include="Forms\Frmmenu.Designer.cs">
       <DependentUpon>Frmmenu.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\frmservicios.cs">
+    <Compile Include="Forms\frmtrabajos.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\frmservicios.Designer.cs">
-      <DependentUpon>frmservicios.cs</DependentUpon>
+    <Compile Include="Forms\frmtrabajos.Designer.cs">
+      <DependentUpon>frmtrabajos.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -103,8 +103,8 @@
     <EmbeddedResource Include="Forms\Frmmenu.resx">
       <DependentUpon>Frmmenu.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\frmservicios.resx">
-      <DependentUpon>frmservicios.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\frmtrabajos.resx">
+      <DependentUpon>frmtrabajos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
