--- a/MASTER TUNE-UP.csproj
+++ b/MASTER TUNE-UP.csproj
@@ -74,11 +74,23 @@
     <Compile Include="Forms\frmdatosg.Designer.cs">
       <DependentUpon>frmdatosg.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Frmlocalidades.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Frmlocalidades.Designer.cs">
+      <DependentUpon>Frmlocalidades.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Frmmenu.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\Frmmenu.Designer.cs">
       <DependentUpon>Frmmenu.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Frmservicios.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Frmservicios.Designer.cs">
+      <DependentUpon>Frmservicios.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\frmtrabajos.cs">
       <SubType>Form</SubType>
@@ -100,8 +112,14 @@
     <EmbeddedResource Include="Forms\frmdatosg.resx">
       <DependentUpon>frmdatosg.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Frmlocalidades.resx">
+      <DependentUpon>Frmlocalidades.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\Frmmenu.resx">
       <DependentUpon>Frmmenu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Frmservicios.resx">
+      <DependentUpon>Frmservicios.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\frmtrabajos.resx">
       <DependentUpon>frmtrabajos.cs</DependentUpon>
