--- a/MASTER TUNE-UP.csproj
+++ b/MASTER TUNE-UP.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Clases\Acceso.cs" />
+    <Compile Include="Clases\greet.cs" />
     <Compile Include="Clases\Usuario.cs" />
     <Compile Include="Clases\Conexión.cs" />
     <Compile Include="Clases\Valores.cs" />
